Bug 116869 - Unable to access the sidebar tab bar using keyboard for decks containing one panel when sidebar is undocked
Summary: Unable to access the sidebar tab bar using keyboard for decks containing one ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-07 21:10 UTC by Jim Raykowski
Modified: 2018-11-06 18:48 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-04-07 21:10:16 UTC
There doesn't seem to be a way to use the keyboard to access the sidebar tab bar tab buttons when the sidebar is undocked and the focus is in the panel content of a deck with only one panel. Sidebar decks in Writer that have only one panel are Styles, Gallery, and Navigator.

Steps to reproduce:

1) open writer
2) open sidebar (Menu > View > Sidebar)
3) undock sidebar (drag deck title or use tab button (gear icon) Sidebar Settings > Undock)
4) mouse click on Styles, Gallery, or Navigator tab bar tab button
5) mouse click in panel content tool item that will grab focus

Result:
Keyboard focus is in panel content and there is no way to move focus to tabs in tab bar using the keyboard.

tab key can be used to cycle through panel content
esc key has no affect for undocked sidebar with single panel decks selected

Suggested Result: 
esc key moves keyboard focus to Sidebar Settings tab bar tab button for undocked sidebar single panel decks.
Comment 1 Jim Raykowski 2018-04-08 00:33:05 UTC
(In reply to Jim Raykowski from comment #0)
> esc key has no affect for undocked sidebar with single panel decks selected

actually the esc key in this situation moves focus to the first element of the panel content but still can't get to the tab bar...
Comment 2 Buovjaga 2018-04-18 11:34:52 UTC
Repro.

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: c8c74a0b4ca6f3a3619f423b6548c80c52392ae0
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on April 15th 2018
Comment 3 Jim Raykowski 2018-09-28 07:00:59 UTC
Patch that moves focus to tab bar menu on escape key press when sidebar is floating and deck has one panel:
https://gerrit.libreoffice.org/#/c/61052/
Comment 4 Buovjaga 2018-09-28 09:39:33 UTC
(In reply to Jim Raykowski from comment #3)
> Patch that moves focus to tab bar menu on escape key press when sidebar is
> floating and deck has one panel:
> https://gerrit.libreoffice.org/#/c/61052/

Seems to be working.

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: d357ea1d1ff95cb5ce2ee6b4828afa2484707256
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); Calc: threaded
Built on 28 September 2018
Comment 5 Commit Notification 2018-11-03 01:09:50 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/8ff55c16e853600fdac6164d34ff35421a1f112e%5E%21

tdf#116869 Fix unable to access sidebar tab bar using keyboard

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.