tdf#116869 Fix unable to access sidebar tab bar using keyboard

...when sidebar is floating and deck has one panel

Change-Id: Ic741efbfbaf60241b360470c9bc736743f18f0ed